--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.onboardings.GetStartedFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/size8"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/subTitleText"
         android:layout_width="@dimen/size0"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
@@ -30,11 +30,11 @@
         android:textSize="@dimen/font_size_18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/titleText"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/pageImage"
         android:layout_width="match_parent"
         android:layout_height="@dimen/size0"
         android:src="@drawable/get_started_image"
@@ -54,7 +54,7 @@
         app:cardCornerRadius="@dimen/size6"
         app:cardElevation="@dimen/size1"
         android:layout_marginBottom="@dimen/size7"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/byTappingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
@@ -72,7 +72,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/byTappingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
