--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,4 +5,17 @@
         <item name="android:statusBarColor">@android:color/white</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+
+    <style name="SearchBarStyle">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:hint">Search</item>
+        <item name="android:drawableStart">@drawable/search_icon</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:inputType">textCapSentences</item>
+        <item name="android:textColorHint">#AFAFAF</item>
+        <item name="android:background">@drawable/search_background</item>
+        <item name="android:drawablePadding">@dimen/size2</item>
+        <item name="maxLines">1</item>
+    </style>
 </resources>
