--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,5 +36,13 @@
         android:id="@+id/paywallFragment"
         android:name="com.plantapphubx.ui.paywall.PaywallFragment"
         android:label="fragment_paywall"
-        tools:layout="@layout/fragment_paywall" />
+        tools:layout="@layout/fragment_paywall" >
+        <action
+            android:id="@+id/action_paywallFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.plantapphubx.ui.home.HomeFragment"
+        android:label="HomeFragment" />
 </navigation>
