--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,16 @@
     <color name="onboarding_button">#28AF6E</color>
     <color name="paywall_background_color">#0E1E16</color>
 
-    <!-- Seçili durum renkleri -->
     <color name="selected_background">#28AF6E</color>
     <color name="selected_border">#28AF6E</color>
     <color name="selected_radio_color">#28AF6E</color>
 
-    <!-- Seçili olmayan durum renkleri -->
-    <color name="unselected_background">#05FFFFFF</color> <!-- %5 opak beyaz -->
-    <color name="unselected_border">#4DFFFFFF</color> <!-- %30 opak beyaz -->
-    <color name="unselected_radio_color">#4DFFFFFF</color> <!-- %30 opak beyaz -->
+    <color name="unselected_background">#05FFFFFF</color>
+    <color name="unselected_border">#4DFFFFFF</color>
+    <color name="unselected_radio_color">#4DFFFFFF</color>
+
+    <color name="hi_plant_lover_color">#13231B</color>
+
+
+
 </resources>
