--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,6 +49,8 @@
     <dimen name="size50">100dp</dimen>
     <dimen name="size55">110dp</dimen>
     <dimen name="size60">120dp</dimen>
+    <dimen name="size130">260dp</dimen>
+
 
     <dimen name="font_size_9">9sp</dimen>
     <dimen name="font_size_10">10sp</dimen>
