--- a/app/src/main/res/drawable/ic_mail.xml
+++ b/app/src/main/res/drawable/ic_mail.xml
@@ -32,4 +32,11 @@
       </gradient>
     </aapt:attr>
   </path>
+  <path
+      android:pathData="M37.5,2L37.5,2A7.5,7.5 0,0 1,45 9.5L45,9.5A7.5,7.5 0,0 1,37.5 17L37.5,17A7.5,7.5 0,0 1,30 9.5L30,9.5A7.5,7.5 0,0 1,37.5 2z"
+      android:fillColor="#E82C13"
+      android:fillAlpha="0.9"/>
+  <path
+      android:pathData="M37.548,12.341H38.532V6H37.548L35.878,7.187V8.153L37.473,7.015H37.548V12.341Z"
+      android:fillColor="#ffffff"/>
 </vector>
