--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -132,6 +132,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/size8"
         android:orientation="horizontal"
+        android:layout_marginBottom="@dimen/size16"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
