--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,5 +44,30 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.plantapphubx.ui.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_profileFragment2"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_diagnoseFragment2"
+            app:destination="@id/diagnoseFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_myGardenFragment2"
+            app:destination="@id/myGardenFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.plantapphubx.ui.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/diagnoseFragment"
+        android:name="com.plantapphubx.ui.diagnose.DiagnoseFragment"
+        android:label="fragment_diagnose"
+        tools:layout="@layout/fragment_diagnose" />
+    <fragment
+        android:id="@+id/myGardenFragment"
+        android:name="com.plantapphubx.ui.mygarden.MyGardenFragment"
+        android:label="fragment_my_garden"
+        tools:layout="@layout/fragment_my_garden" />
 </navigation>
